# taxonml

./: .gitignore  deps.json  open_helper_refactor_issues.sh  pyproject.toml  requirements.txt
configs/: experiment_name.yaml  old_experiment_name.yaml  sequence_fold.yaml
src/taxml/cli/: cli_mock.py  exp_setup.py  finetune.py  pretrain.py  setup_experiment.py
src/taxml/core/: config.py  constants.py  io.py  logging.py  paths.py  randomness.py
src/taxml/data/: collators.py  datasets.py  samplers.py
src/taxml/heads/: classifiers.py
src/taxml/labels/: encoder.py  space.py
src/taxml/metrics/: rank.py
src/taxml/models/: taxonomy_model.py
src/taxml/preprocessing/: augmentation.py  build.py  padding.py  preprocessor.py  tokenization.py  truncation.py
src/taxml/training/: schedulers.py  trainers.py
src/taxonml/cli/: 01_experiment_prep.py  finetune.py  pretrain.py
src/taxonml/core/: config.py  types.py
src/taxonml/encoders/: bert.py
src/taxonml/heads/: classifiers.py  mlm.py
src/taxonml/labels/: space.py
src/taxonml/models/: taxonomy_model.py
src/taxonml/preprocessing/: preprocessor.py  tokenization.py  vocab.py
src/taxonml/training/: trainers.py
