[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "taxonml"
version = "0.1.0"
description = "Taxonomy classification models and training"
requires-python = ">=3.11"
# Do NOT put torch/transformers here; modules provide them.

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]